@@ -140,6 +140,30 @@ static int cli_id_seq = 1;      /* range 1...INT_MAX */
 #define _internal_error_response(c) \
     _client_printf(c, CP_ERR_INTERNAL, __FILE__, __LINE__)
 
+static void _set_nonblocking(int fd)
+{
+    int fd_settings;
+
+    /* mark fd as non-blocking */
+    fd_settings = fcntl(fd, F_GETFL, 0);
+    if (fd_settings < 0)
+        err_exit(TRUE, "fcntl F_GETFL");
+    if (fcntl(fd, F_SETFL, fd_settings | O_NONBLOCK) < 0)
+        err_exit(TRUE, "fcntl F_SETFL");
+}
+
+static void _clr_nonblocking(int fd)
+{
+    int fd_settings;
+
+    /* mark fd as non-blocking */
+    fd_settings = fcntl(fd, F_GETFL, 0);
+    if (fd_settings < 0)
+        err_exit(TRUE, "fcntl F_GETFL");
+    if (fcntl(fd, F_SETFL, fd_settings & ~(O_NONBLOCK)) < 0)
+        err_exit(TRUE, "fcntl F_SETFL");
+}
+
 /*
  * printf-like function which writes to the output cbuf.
  */
@@ -573,9 +597,9 @@ static void _parse_input(Client * c, char *input)
         c->exprange = !c->exprange;                     /* exprange */
         _client_printf(c, CP_RSP_EXPRANGE, c->exprange ? "ON" : "OFF");
     } else if (!strncasecmp(str, CP_QUIT, strlen(CP_QUIT))) {
+        c->client_quit = TRUE;
         _client_printf(c, CP_RSP_QUIT);                 /* quit */
         _handle_write(c);
-        c->client_quit = TRUE;
     } else if (sscanf(str, CP_ON, arg1) == 1) {         /* on hostlist */
         cmd = _create_command(c, PM_POWER_ON, arg1);
     } else if (sscanf(str, CP_OFF, arg1) == 1) {        /* off hostlist */
@@ -766,7 +790,6 @@ static Client *_find_client(int seq)
 static void _listen_client(void)
 {
     struct sockaddr_in addr;
-    int fd_settings;
     int opt;
     unsigned short listen_port;
 
@@ -787,11 +810,7 @@ static void _listen_client(void)
      * for this problem is to:  1.  Always set a listening socket nonblocking
      * if we use select ..."                            - Stevens, UNP p424
      */
-    fd_settings = fcntl(listen_fd, F_GETFL, 0);
-    if (fd_settings < 0)
-        err_exit(TRUE, "fcntl F_GETFL");
-    if (fcntl(listen_fd, F_SETFL, fd_settings | O_NONBLOCK) < 0)
-        err_exit(TRUE, "fcntl F_SETFL");
+    _set_nonblocking(listen_fd);
 
     addr.sin_family = AF_INET;
     listen_port = conf_get_listen_port();
@@ -811,7 +830,6 @@ static void _create_client_socket(void)
     Client *c;
     struct sockaddr_in addr;
     socklen_t addr_size = sizeof(struct sockaddr_in);
-    int fd_settings;
     struct hostent *hent;
     char buf[64];
 
@@ -875,12 +893,7 @@ static void _create_client_socket(void)
     c->to = cbuf_create(MIN_CLIENT_BUF, MAX_CLIENT_BUF);
     c->from = cbuf_create(MIN_CLIENT_BUF, MAX_CLIENT_BUF);
 
-    /* mark fd as non-blocking */
-    fd_settings = fcntl(c->fd, F_GETFL, 0);
-    if (fd_settings < 0)
-        err_exit(TRUE, "fcntl F_GETFL");
-    if (fcntl(c->fd, F_SETFL, fd_settings | O_NONBLOCK) < 0)
-        err_exit(TRUE, "fcntl F_SETFL");
+    _set_nonblocking(c->fd);
 
     /* append to the list of clients */
     list_append(cli_clients, c);
@@ -897,7 +910,6 @@ static void _create_client_socket(void)
 static void _create_client_stdio(void)
 {
     Client *c;
-    int fd_settings;
 
     /* create client data structure */
     c = (Client *) xmalloc(sizeof(Client));
@@ -915,16 +927,8 @@ static void _create_client_stdio(void)
     c->to = cbuf_create(MIN_CLIENT_BUF, MAX_CLIENT_BUF);
     c->from = cbuf_create(MIN_CLIENT_BUF, MAX_CLIENT_BUF);
 
-    fd_settings = fcntl(STDIN_FILENO, F_GETFL, 0);
-    if (fd_settings < 0)
-        err_exit(TRUE, "fcntl F_GETFL");
-    if (fcntl(STDIN_FILENO, F_SETFL, fd_settings | O_NONBLOCK) < 0)
-        err_exit(TRUE, "fcntl F_SETFL");
-    fd_settings = fcntl(STDOUT_FILENO, F_GETFL, 0);
-    if (fd_settings < 0)
-        err_exit(TRUE, "fcntl F_GETFL");
-    if (fcntl(STDOUT_FILENO, F_SETFL, fd_settings | O_NONBLOCK) < 0)
-        err_exit(TRUE, "fcntl F_SETFL");
+    _set_nonblocking(c->fd);
+    _set_nonblocking(c->ofd);
 
     /* append to the list of clients */
     list_append(cli_clients, c);
@@ -964,10 +968,12 @@ static void _handle_read(Client * c)
 static void _handle_write(Client * c)
 {
     int n;
-    int *ofd = c->ofd != NO_FD ? &c->ofd : &c->fd;
+    int ofd = c->ofd != NO_FD ? c->ofd : c->fd;
 
     assert(c->magic == CLI_MAGIC);
-    n = cbuf_read_to_fd(c->to, *ofd, -1);
+    if (c->client_quit)
+        _clr_nonblocking(ofd);
+    n = cbuf_read_to_fd(c->to, ofd, -1);
     if (n < 0) {
         err(TRUE, "write error on client");
         c->client_quit = TRUE;
